Scrollbar margin top fix for no banner scenario

--- a/apps/forms-flow-ai/forms-flow-web/src/components/FOI/FOIRequest/foirequest.scss
+++ b/apps/forms-flow-ai/forms-flow-web/src/components/FOI/FOIRequest/foirequest.scss
@@ -152,3 +152,10 @@ height: fit-content;
         margin: 0px !important;
     }
 }
+
+.request-scrollbar-height {
+    &::-webkit-scrollbar-track {
+        margin-top: 105px !important;
+        background: none !important;
+    }
+}
